# SelfStudy_OAI

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: code_checks.yml  notebook_checks.yml
problems/01_adversarial_attacks/problem/: problem.ipynb  validation_script.py
problems/01_adversarial_attacks/solution/: solution_100.ipynb
problems/01_adversarial_attacks/tutorial/: adversarial_attacks_tutorial.ipynb
problems/02_color_quantization/problem/: kwantyzacja_kolorow.ipynb  validation_script.py
problems/02_color_quantization/solution/: solution_150.ipynb
problems/02_color_quantization/tutorial/: color_quantization_tutorial.ipynb
problems/03_dependency_parsing/problem/: analiza_zaleznosciowa.ipynb  utils.py
problems/03_dependency_parsing/solution/: solution_176.ipynb  validation_script.py
problems/03_dependency_parsing/tutorial/: dependency_parsing_tutorial.ipynb
problems/04_imbalanced_classification/problem/: niezbalansowana_klasyfikacja.ipynb
problems/04_imbalanced_classification/solution/: solution_100.ipynb  validation_script.py
problems/04_imbalanced_classification/tutorial/: imbalanced_classification_tutorial.ipynb
problems/05_pruning/problem/: pruning.ipynb
problems/05_pruning/solution/: solution_150.ipynb  validation_script.py
problems/05_pruning/tutorial/: neural_network_pruning_tutorial.ipynb
problems/06_riddles/problem/: zagadki.ipynb
problems/06_riddles/solution/: solution_101.ipynb  (+1 more)
scripts/: clean_notebooks.py  setup.sh
tests/: test_basic.py
(+1 files in other folders)
